--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>GIT</title>
 </head>
 <body>
-    
+    <h1>hola git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit officiis, sed explicabo, debitis soluta suscipit dolore distinctio deleniti voluptate dignissimos facere fugiat quam laboriosam architecto veritatis inventore reiciendis rerum dolores?</p>
+
+    <h2>test</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis libero vitae ad soluta architecto exercitationem molestiae harum neque dolor ratione vel similique voluptas esse, placeat eligendi nihil. Exercitationem, veniam nemo.</p>
 </body>
 </html>
